src/scss/sections/_about.scss
@use "../utils" as u;

.about-me-container {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;

    @include u.breakpoint(desktop) {
        flex-direction: row;
        column-gap: 3rem;
        margin: 2rem;
    }

    @include u.breakpoint(desktop) {
        height: 100vh;
        justify-content: space-evenly;
    }
}

.about-me-headshot {
    margin: 1rem;
    border-radius: 50%;
    width: 300px;
    height: 330px;

    @include u.breakpoint(desktop) {
        width: 350px;
        height: 380px;
        display: flex;
        flex-shrink: 0;    // To prevent img from shriking due to flex box
        align-items: center;
    }

    @include u.breakpoint(large-desktop) {
        width: 400px;
        height: 430px;
        display: flex;
        flex-shrink: 0;    // To prevent img from shriking due to flex box
        align-items: center;
    }
}

.about-desc {
    @include u.breakpoint(desktop) {
        font-size: 24px;
        width: 480px;
    }

    @include u.breakpoint(large-desktop) {
        font-size: 28px;
        width: 650px;
    }
}

